plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'io.github.jwharm.javagi:gtk:0.10.2'
    implementation 'io.github.jwharm.javagi:adw:0.10.2'
    implementation 'io.github.jwharm.javagi:gst:0.10.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.named('run') {
    jvmArgs += "--enable-native-access=ALL-UNNAMED"
    jvmArgs += "-Djava.library.path=/usr/lib64:/lib64:/lib:/usr/lib:/lib/x86_64-linux-gnu"
}

application {
    mainClass = "io.github.jwharm.javagi.examples.playsound.PlaySound"
}

